--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -38,7 +38,7 @@ const urlWithoutLang = currentUrl.slice(4);   // Remove /{lang}/
   text-decoration: underline;
 }
 .active {
-  color: white;
+  color: var(--white);
   background-color: var(--accent);
   text-decoration: none !important;
 }
