--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ const t = useTranslations(lang);
 const year = new Date().getFullYear();
 ---
 
-<footer class="bg-accent-blue dark:bg-gray-900">
+<footer class="bg-accent-blue dark:bg-gray-900 relative">
   <div class="mx-auto max-w-screen-xl space-y-8 px-4 py-16 sm:px-6 lg:space-y-16 lg:px-8">
     <div class="grid grid-cols-1 gap-8 lg:grid-cols-3">
       <div class="z-10">
@@ -151,8 +151,6 @@ const year = new Date().getFullYear();
 
 <style lang="scss">
 footer {
-  position: relative;
-
   .sign {
     line-height: 25px;
 
