--- a/src/components/articles/Aside.astro
+++ b/src/components/articles/Aside.astro
@@ -27,9 +27,9 @@ const relateds = relatedPosts ? await getEntries(relatedPosts as any) : null;
         relateds?.map((post: any) => (
           post ? <a href={`/${lang}/blog/${post.collection}/${post.slug.slice(3)}`} class="hover:opacity-80" title={ post.data.title }>
             <h4 class="text-gradient">{ post.data.title }</h4>
-            <p class="text-gradient">{ post.data.description }</p>
+            <p class="">{ post.data.description }</p>
             <small class="block text-right w-full">
-              Read Article
+              Read post
             </small>
             <hr class="my-4" />
           </a> : null
@@ -52,50 +52,3 @@ const relateds = relatedPosts ? await getEntries(relatedPosts as any) : null;
     </div>
   </div>
 </aside>
-
-<style lang="scss">
-.colls-box {
-  li {
-    position: relative;
-    background-color: var(--accent);
-    border: 0px solid var(--accent);
-    margin: 12px 5px;
-
-    a {
-      position: relative;
-      color: var(--white);
-      display: block;
-      padding: 0 10px;
-      border: transparent;
-      z-index: 10;
-    }
-    a::before, a::after {
-      content: "";
-      position: absolute;
-      background: var(--accent);
-      width: 100%;
-      height: 15px;
-      left: 0;
-      overflow: hidden;
-      backface-visibility: visible;
-      transition: .5s;
-    }
-    a::before {
-      clip-path: polygon(0 25%, 75% 0, 100% 25%, 100% 100%, 0 100%);
-      top: -10px;
-    }
-    a::after {
-      clip-path: polygon(0 0, 100% 0, 100% 75%, 25% 100%, 0 75%);
-      bottom: -10px;
-    }
-    a:hover::before, a:focus::before {
-      clip-path: polygon(0 25%, 25% 0, 100% 25%, 100% 100%, 0 100%);
-      transition: .5s;
-    }
-    a:hover::after, a:focus::after {
-      clip-path: polygon(0 0, 100% 0, 100% 75%, 75% 100%, 0 75%);
-      transition: .5s;
-    }
-  }
-}
-</style>
