--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -14,15 +14,50 @@
     small {
         color: var(--primary);
     }
-    /* .badge {
-        color: var(--primary);
-        border: 1px solid var(--primary);
-        padding: 5px 10px;
+    .colls-box {
+        li {
+            position: relative;
+            background-color: var(--accent);
+            border: 0px solid var(--accent);
+            margin: 12px 5px;
+
+            a {
+                position: relative;
+                color: var(--white);
+                display: block;
+                padding: 0 10px;
+                border: transparent;
+                z-index: 10;
+            }
+            a::before, a::after {
+                content: "";
+                position: absolute;
+                background: var(--accent);
+                width: 100%;
+                height: 15px;
+                left: 0;
+                overflow: hidden;
+                backface-visibility: visible;
+                transition: .5s;
+            }
+            a::before {
+                clip-path: polygon(0 25%, 75% 0, 100% 25%, 100% 100%, 0 100%);
+                top: -10px;
+            }
+            a::after {
+                clip-path: polygon(0 0, 100% 0, 100% 75%, 25% 100%, 0 75%);
+                bottom: -10px;
+            }
+            a:hover::before, a:focus::before {
+                clip-path: polygon(0 25%, 25% 0, 100% 25%, 100% 100%, 0 100%);
+                transition: .5s;
+            }
+            a:hover::after, a:focus::after {
+                clip-path: polygon(0 0, 100% 0, 100% 75%, 75% 100%, 0 75%);
+                transition: .5s;
+            }
+        }
     }
-    .badge:hover, .badge:focus {
-        color: white;
-        background: var(--bg-gradient);
-    } */
 }
 .dark .main-aside-content {
     .bg-polygon::before, .bg-polygon::after {
