--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -4,7 +4,9 @@ import { collectionMetadata } from '@content/config';
 import { languages } from '@i18n/ui';
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
 import MainLayout from '@layouts/MainLayout.astro';
-import BlogCard from '@components/BlogCard.astro';
+import Presentation from '@components/home/1. Presentation.astro';
+import Techs from '@components/home/2. Techs.astro';
+import Blog from '@components/home/3. Blog.astro';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
@@ -39,7 +41,7 @@ export async function getStaticPaths() {
   return pages;
 }
 
-const post = Astro.props;
+const { posts } = Astro.props;
 ---
 
 <MainLayout
@@ -48,194 +50,17 @@ const post = Astro.props;
   image="/kevin.png"
   addWidth={false}
 >
-  <section class="main-width grid grid-cols-1 gap-5 lg:grid-cols-3 lg:gap-8">
-    <div class="lg:col-span-2">
-      <h1 class="text-gradient">
-        I'm Kev
-      </h1>
-      <p class="mb-3">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda tempora sunt iste quia officia illo obcaecati esse alias, nihil corrupti animi cupiditate adipisci temporibus aliquam quaerat vitae culpa, vel omnis.
-      </p>
-      <p class="mb-3">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus rerum laborum facilis corrupti aliquam praesentium. Voluptate, provident! Esse culpa omnis nesciunt quo vitae excepturi alias reprehenderit, temporibus odio modi doloribus.
-      </p>
-      <hr>
-    </div>
-    <div class="order-first md:order-last">
-      <div class="polygon-shadow">
-        <img src="/kevin.png" class="kev-image m-auto" alt="Kevin Fiorentino" />
-      </div>
-      <p class="uppercase dark:text-white text-center mt-3">I got amazing power of observation</p>
-    </div>
-  </section>
+
+  <Presentation></Presentation>
 
   <br><br>
 
-  <section class="bg-techs bg-polygon relative">
-    <div class="techs-main-box main-width relative z-10">
-      <h2 class="text-white text-center mb-5">
-        {t('home.tech')}
-      </h2>
-      <div role="list" class="flex flex-wrap justify-evenly items-center">
-
-        <div class="techs-group m-2 sm:m-3">
-          <img src="/tech/javascript.png" alt="Javascript logo" title="Javascript" />
-          <img src="/tech/typescript.svg" alt="TypeScript logo" title="TypeScript" />
-          <img src="/tech/angular.png" alt="Angular logo" title="Angular" />
-          <img src="/tech/react.png" alt="React logo" title="React" />
-        </div>
-
-        <div class="techs-group m-2 sm:m-3">
-          <img src="/tech/php.png" alt="PHP logo" title="PHP" />
-          <img src="/tech/nodejs.png" alt="NodeJS logo" title="NodeJS" />
-          <img src="/tech/rust.svg" alt="Rust logo" title="Rust" />
-          <img src="/tech/solidity.png" alt="Solidity logo" title="Solidity" />
-        </div>
-
-        <div class="techs-group m-2 sm:m-3">
-          <img src="/tech/solana.svg" alt="Solana logo" title="Solana Blockchain" />
-          <img src="/tech/ethereum.svg" alt="Ethereum logo" title="Ethereum Blockchain" />
-        </div>
-
-        <div class="techs-group m-2 sm:m-3">
-          <img src="/tech/mongodb.png" alt="MongoDB logo" title="MongoDB" />
-          <img src="/tech/mysql.png" alt="MySQL logo" title="MySQL" />
-          <img src="/tech/elastic.png" alt="Elasticsearch logo" title="Elasticsearch" />
-        </div>
-
-        <div class="techs-group m-2 sm:m-3">
-          <img src="/tech/docker.png" alt="Docker logo" title="Docker" />
-          <img src="/tech/nginx.png" alt="NGINX logo" title="NGINX" />
-        </div>
-
-      </div>
-      <div class="flex justify-center mt-5">
-        <div class="btn-know-box" style="max-width: max-content;">
-          <a href={`/${lang}/work-experience`} title={t('home.tech.btn')} class="btn-know text-white font-bold py-2 px-4">
-            <span class="text-lg font-medium">{t('home.tech.btn')}</span>
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
+  <Techs></Techs>
 
   <br><br>
 
-  <section class="main-width">
-    <div>
-      <h2 class="text-gradient font-bold mb-3">
-        Blog
-      </h2>
-
-        <div role="list" class="cards-grid">
-          {
-            post.posts.map((item: any) => (
-              <div class="polygon-shadow-hover">
-                <BlogCard
-                  slug={item.slug}
-                  collection={item.collection}
-                  title={item.data.title}
-                  description={item.data.description}
-                  image={item.data.image}
-                  pubDate={item.data.pubDate}
-                >
-                </BlogCard>
-              </div>
-            ))
-          }
-      </div>
-    </div>
-  </section>
+  <Blog
+    posts={posts}
+  ></Blog>
 
 </MainLayout>
-
-<style lang="scss">
-.kev-image {
-  max-height: 300px;
-  clip-path: polygon(15% 10%, 100% 0, 100% 25%, 100% 100%, 0 85%);
-}
-.bg-techs {
-  background: var(--primary);
-
-  h2 {
-    -webkit-text-fill-color: white;
-  }
-}
-.techs-main-box {
-  h2 {
-    line-height: 35px;
-  }
-  .techs-group {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    min-height: 100px;
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-
-    img {
-      max-height: 70px;
-      max-width: 70px;
-      box-shadow: none;
-      margin: 10px;
-      transform: scale(1);
-      transition: .5s;
-      z-index: 1;
-    }
-    img:hover {
-      transform: scale(1.1);
-      transition: .5s;
-    }
-  }
-  .techs-group:before, .techs-group:after {
-    content: "";
-    position: absolute;
-    background: rgba(255, 255, 255, 0.25);
-    width: 100%;
-    height: 115px;
-    left: 0;
-    overflow: hidden;
-    backface-visibility: visible;
-  }
-  .techs-group:before {
-    clip-path: polygon(0 25%, 100% 0, 100% 25%, 100% 100%, 0 100%);
-    top: -20px;
-  }
-  .techs-group:after {
-    clip-path: polygon(0 25%, 100% 0, 100% 25%, 100% 100%, 0 100%);
-    top: -20px;
-  }
-  @media (max-width: 600px) {
-    .techs-group {
-      min-height: 80px;
-
-      img {
-        max-height: 60px;
-        max-width: 60px;
-        margin: 7px;
-      }
-    }
-    .techs-group:before, .techs-group:after {
-      height: 97px;
-    }
-  }
-  .btn-know-box {
-    .btn-know {
-      display: inline-block;
-      background-color: var(--alternative);
-      height: 55px;
-      clip-path: polygon(0 0,100% 0,100% 75%,0% 100%,0 75%);
-      transition: .3s;
-    }
-    .btn-know:hover, .btn-know:focus {
-      clip-path: polygon(0% 0%,100% 0%,100% 100%,0% 75%,0 75%);
-      transition: .3s;
-    }
-  }
-  .btn-know-box:hover, .btn-know-box:focus {
-    filter: drop-shadow(0px 3px 2px var(--black));
-  }
-}
-</style>
