Work experience progress

--- a/src/pages/[lang]/work-experience.astro
+++ b/src/pages/[lang]/work-experience.astro
@@ -24,13 +24,60 @@ export async function getStaticPaths() {
   title={`${t('experience')} | Kevin Fiorentino`}
   description={t('experience.description')}
   image="/kevin.png"
-  addWidth={true}
+  addWidth={false}
 >
-  <h1 class="text-gradient">
-    {t('experience')}
-  </h1>
+  <section class="experience-page relative">
+
+    <div class="main-width">
+      <h1 class="text-gradient relative z-10">
+        {t('experience')}
+      </h1>
+    </div>
+
+    <br>
+
+    <div class="bg-polygon relative">
+      <div class="main-width relative pt-0 pb-0 z-10">
+
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt deleniti molestiae at necessitatibus modi deserunt omnis, sit fuga aperiam suscipit perferendis magnam itaque fugit maiores, consectetur aut reiciendis enim quibusdam!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. In nostrum quo quia sint blanditiis aspernatur placeat pariatur ullam iste. Optio, possimus voluptates dicta officiis magni repellat explicabo similique tempora. Officiis!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. In nostrum quo quia sint blanditiis aspernatur placeat pariatur ullam iste. Optio, possimus voluptates dicta officiis magni repellat explicabo similique tempora. Officiis!
+
+      </div>
+    </div>
+
+    <br><br><br><br>
+
+    <div class="bg-polygon relative">
+      <div class="main-width relative pt-0 pb-0 z-10">
+
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt deleniti molestiae at necessitatibus modi deserunt omnis, sit fuga aperiam suscipit perferendis magnam itaque fugit maiores, consectetur aut reiciendis enim quibusdam!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. In nostrum quo quia sint blanditiis aspernatur placeat pariatur ullam iste. Optio, possimus voluptates dicta officiis magni repellat explicabo similique tempora. Officiis!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. In nostrum quo quia sint blanditiis aspernatur placeat pariatur ullam iste. Optio, possimus voluptates dicta officiis magni repellat explicabo similique tempora. Officiis!
+
+      </div>
+    </div>
+
+    <br><br><br><br>
+
+    <div class="bg-polygon relative">
+      <div class="main-width relative pt-0 pb-0 z-10">
+
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt deleniti molestiae at necessitatibus modi deserunt omnis, sit fuga aperiam suscipit perferendis magnam itaque fugit maiores, consectetur aut reiciendis enim quibusdam!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. In nostrum quo quia sint blanditiis aspernatur placeat pariatur ullam iste. Optio, possimus voluptates dicta officiis magni repellat explicabo similique tempora. Officiis!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. In nostrum quo quia sint blanditiis aspernatur placeat pariatur ullam iste. Optio, possimus voluptates dicta officiis magni repellat explicabo similique tempora. Officiis!
+
+      </div>
+    </div>
+
+  </section>
+
+  <br><br>
+
 </MainLayout>
 
 <style>
+.experience-page {
 
+}
 </style>
