--- a/src/pages/[lang]/contact.astro
+++ b/src/pages/[lang]/contact.astro
@@ -27,7 +27,7 @@ export async function getStaticPaths() {
   addWidth={false}
 >
   <br><br>
-  <section class="contact-page bg-polygon relative" style="background: var(--primary);">
+  <section class="contact-page bg-polygon relative">
     <div class="main-width pt-0 pb-0">
       <h1 class="text-gradient relative z-10">
         {t('contact')}
@@ -86,13 +86,14 @@ export async function getStaticPaths() {
 
 <style lang="scss">
 .contact-page {
+  background: var(--primary);
+
   h1 {
     -webkit-text-fill-color: white;
   }
   .contact-box {
     border: 1px solid var(--white);
     box-shadow: 0 8px 32px 0 rgba(20, 20, 100, 0.2);
-    margin: 15px 0;
 
     p {
       font-weight: 400;
