--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,7 +9,8 @@ h1, h2, h3, h4, h5, h5, h6 {
 h1 {
     font-size: 3rem;
     font-weight: 800;
-    margin: 0;
+    line-height: 50px;
+    margin: 10px 0;
 }
 h2 {
     font-size: 2.3rem;
