Work experience progress

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -70,6 +70,9 @@ const day = pubDate.getDate();
     -webkit-text-fill-color: white;
     line-height: 30px;
   }
+  img {
+    clip-path: polygon(2% 2%, 100% -2%, 98% 100%, 100% 100%, 0 98%);
+  }
   &.card-background {
     background: var(--bg-gradient);
   }
