Content work experience

--- a/src/pages/[lang]/work-experience.astro
+++ b/src/pages/[lang]/work-experience.astro
@@ -39,14 +39,47 @@ export async function getStaticPaths() {
     <div class="experience-box bg-polygon relative">
       <div class="main-width relative pt-0 pb-0 z-10">
 
-        <div class="block sm:flex items-center">
-          <a href="#" target="_blank" title="" class="text-center mr-4 mb-2">
-            <img src="/tech/solana.svg" alt="Solana logo" title="Solana Blockchain" />
+        <div class="block sm:flex">
+          <a href="https://www.astreavirtual.com/" target="_blank" title="Editorial Astrea" class="text-center mt-2 mb-2 mr-4">
+            <img src="https://media.licdn.com/dms/image/C560BAQGEFqpF1SDLjA/company-logo_100_100/0/1519889152734?e=1698278400&v=beta&t=kvCUVJh9t1rxKMeVSM5oyL-MAc50AHC0O7UZlkGBaxg" alt="Astrea logo" />
+            <small>Editorial Astrea</small>
+          </a>
+          <div>
+            <h2>Software Manager</h2>
+            <small><i>May 2021 - Present</i></small>
+            <p>
+              Development of a digital library for reading legal books. <br>
+              Development of e-commerce for the sale of books.
+            </p>
+            <span><strong>Skills:</strong> Angular · NodeJS · Docker · Firebase · IBM Cloud · MongoDB · Elasticsearch</span>
+            <div class="mt-3">
+              <h3>Researcher: Artificial Intelligence Applied to Justice</h3>
+              <small><i>April 2020 - May 2021</i></small>
+              <p>
+                Researcher of technologies applied to justice. <br>
+                Artificial intelligence for lawyers and judges.
+              </p>
+              <span><strong>Skills:</strong> Angular · NodeJS · Artificial Intelligence (AI) · IBM Watson · Heroku · Python</span>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <br><br><br><br>
+
+    <div class="experience-box bg-polygon relative">
+      <div class="main-width relative pt-0 pb-0 z-10">
+
+        <div class="block sm:flex">
+          <a href="https://platzi.com/" target="_blank" title="Platzi" class="text-center mt-2 mb-2 mr-4">
+            <img src="https://media.licdn.com/dms/image/C4E0BAQEOTcHh0HnWwQ/company-logo_100_100/0/1677870817987?e=1698278400&v=beta&t=Wd2A1ZsteH34DS-pSbYkvyn9tkkF4GIBN_iOF79Tn54" alt="Platzi logo" />
             <small>Platzi</small>
           </a>
           <div>
             <h2>Writing Contributor</h2>
-            <small>Mar 2022 - Present</small>
+            <small><i>Mar 2022 - Present</i></small>
             <p>
               Content creator to contribute to Platzi’s community about technologies such as Angular, NodeJS, Solidity, Rust, Blockchain (Bitcoin, Ethereum, Solana), and Web3. <br>
               Lead contributor to the internal team as editor and content moderator.
@@ -60,8 +93,79 @@ export async function getStaticPaths() {
 
     <br><br><br><br>
 
+    <div class="experience-box bg-polygon relative">
+      <div class="main-width relative pt-0 pb-0 z-10">
 
+        <div class="block sm:flex">
+          <a href="https://alquilando.com/ar" target="_blank" title="Alquilando" class="text-center mt-2 mb-2 mr-4">
+            <img src="https://media.licdn.com/dms/image/C4D0BAQF0G6rVrQazvQ/company-logo_100_100/0/1626794080598?e=1698278400&v=beta&t=hnE-XweL4dUMyGpnU0VLEoHeXMeQeSNgrFWjGp6wKv0" alt="Alquilando logo" />
+            <small>Alquilando</small>
+          </a>
+          <div>
+            <h2>Javascript Full Stack Developer</h2>
+            <small><i>Dec 2020 - Jun 2022 · 1 yr 7 mos</i></small>
+            <p>
+              Development of real state platform for clients in Argentina, Colombia, and Perú that allows communication and rentals management between brokers, tenants, and owners. Development of real state platform for clients in Argentina, Colombia, and Perú that allows communication and rentals management between brokers, tenants, and owners.
+            </p>
+            <span><strong>Skills:</strong> Angular · TypeScript · NodeJS · Express.js · Docker · MongoDB</span>
+          </div>
+        </div>
 
+      </div>
+    </div>
+
+    <br><br><br><br>
+
+    <div class="experience-box bg-polygon relative">
+      <div class="main-width relative pt-0 pb-0 z-10">
+
+        <div class="block sm:flex">
+          <a href="https://turismo.buenosaires.gob.ar/en" target="_blank" title="Gobierno Ciudad de Buenos Aires" class="text-center mt-2 mb-2 mr-4" style="line-height: 20px;">
+            <img src="https://media.licdn.com/dms/image/D4D0BAQG0XC6NvO-qgg/company-logo_100_100/0/1666634813401?e=1698278400&v=beta&t=GBl1rlqMQn6ezCiBY39NcFtpqUnUrs9g0E0ZMmJdVI8" alt="BA logo" />
+            <small>Government City <br> Buenos Aires</small>
+          </a>
+          <div>
+            <h2>PHP Full Stack Developer</h2>
+            <small><i>Sep 2018 - Dec 2020 · 2 yrs 4 mos</i></small>
+            <p>
+              Tourism website development for one of the most important cities in LATAM.
+            </p>
+            <span><strong>Skills:</strong> MySQL · jQuery · Bootstrap · PHP · Drupal</span>
+            <br>
+            <div class="mt-3">
+              <h3>PHP Developer</h3>
+              <small><i>Jul 2017 - Dec 2017 · 6 mos</i></small>
+              <p>
+                Software development for Government of the City of Buenos Aires.
+              </p>
+              <span><strong>Skills:</strong> JavaScript · PostgreSQL · PHP</span>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- <div class="experience-box bg-polygon relative">
+      <div class="main-width relative pt-0 pb-0 z-10">
+
+        <div class="block sm:flex">
+          <a href="" target="_blank" title="" class="text-center mt-2 mb-2 mr-4">
+            <img src="" alt=" logo" />
+            <small></small>
+          </a>
+          <div>
+            <h2></h2>
+            <small><i></i></small>
+            <p>
+
+            </p>
+            <span><strong>Skills:</strong> </span>
+          </div>
+        </div>
+
+      </div>
+    </div> -->
 
   </section>
 
@@ -82,10 +186,17 @@ export async function getStaticPaths() {
       clip-path: polygon(2% 2%, 100% -2%, 98% 100%, 100% 100%, 0 98%);
     }
     h2 {
-      -webkit-text-fill-color: white;
+      -webkit-text-fill-color: var(--white);
       line-height: 40px;
     }
-    small, span {
+    h3 {
+      -webkit-text-fill-color: var(--white);
+    }
+    p {
+      line-height: 20px;
+      margin-bottom: 5px;
+    }
+    p, small, span {
       color: var(--white);
     }
   }
