--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,16 +24,16 @@ const t = useTranslations(lang);
 
             <div class="hidden sm:ml-6 md:block">
               <div class="flex space-x-4">
-                <a href={`/${lang}`} title="Home" class="text-gray-500 dark:text-white transition hover:opacity-75 focus:ring px-4 py-1">
+                <a href={`/${lang}`} title="Home" class="text-gray-500 dark:text-white hover:underline focus:ring px-4 py-1">
                   <span class="text-sm font-medium">Home</span>
                 </a>
-                <a href={`/${lang}/blog`} title="Blog" class="text-gray-500 dark:text-white transition hover:opacity-75 focus:ring px-4 py-1">
+                <a href={`/${lang}/blog`} title="Blog" class="text-gray-500 dark:text-white hover:underline focus:ring px-4 py-1">
                   <span class="text-sm font-medium">Blog</span>
                 </a>
-                <a href={`/${lang}/work-experience`} title={t('experience')} class="text-gray-500 dark:text-white transition hover:opacity-75 focus:ring px-4 py-1">
+                <a href={`/${lang}/work-experience`} title={t('experience')} class="text-gray-500 dark:text-white hover:underline focus:ring px-4 py-1">
                   <span class="text-sm font-medium">{t('experience')}</span>
                 </a>
-                <a href={`/${lang}/contact`} title={t('contact')} class="text-gray-500 dark:text-white transition hover:opacity-75 focus:ring px-4 py-1">
+                <a href={`/${lang}/contact`} title={t('contact')} class="text-gray-500 dark:text-white hover:underline focus:ring px-4 py-1">
                   <span class="text-sm font-medium">{t('contact')}</span>
                 </a>
               </div>
@@ -77,16 +77,16 @@ const t = useTranslations(lang);
         <div class="text-center space-y-1 px-2 pb-3 pt-2">
 
           <!-- aria-current="page" -->
-          <a href={`/${lang}`} title="Home" class="text-gray-500 dark:text-white hover:opacity-75 transition block rounded-md px-3 py-2 text-base font-medium">
+          <a href={`/${lang}`} title="Home" class="text-gray-500 dark:text-white hover:underline block rounded-md px-3 py-2 text-base font-medium">
             <span class="text-sm font-medium">Home</span>
           </a>
-          <a href={`/${lang}/blog`} title="Blog" class="text-gray-500 dark:text-white hover:opacity-75 transition block rounded-md px-3 py-2 text-base font-medium">
+          <a href={`/${lang}/blog`} title="Blog" class="text-gray-500 dark:text-white hover:underline block rounded-md px-3 py-2 text-base font-medium">
             <span class="text-sm font-medium">Blog</span>
           </a>
-          <a href={`/${lang}/work-experience`} title={t('experience')} class="text-gray-500 dark:text-white hover:opacity-75 transition block rounded-md px-3 py-2 text-base font-medium">
+          <a href={`/${lang}/work-experience`} title={t('experience')} class="text-gray-500 dark:text-white hover:underline block rounded-md px-3 py-2 text-base font-medium">
             <span class="text-sm font-medium">{t('experience')}</span>
           </a>
-          <a href={`/${lang}/contact`} title={t('contact')} class="text-gray-500 dark:text-white hover:opacity-75 transition block rounded-md px-3 py-2 text-base font-medium">
+          <a href={`/${lang}/contact`} title={t('contact')} class="text-gray-500 dark:text-white hover:underline block rounded-md px-3 py-2 text-base font-medium">
             <span class="text-sm font-medium">{t('contact')}</span>
           </a>
 
