--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -39,7 +39,7 @@ const urlWithoutLang = currentUrl.slice(4);   // Remove /{lang}/
 }
 .active {
   color: var(--white);
-  background-color: var(--accent);
+  background-color: var(--alternative);
   text-decoration: none !important;
 }
 @media (max-width: 600px) {
