--- a/src/components/home/1. Presentation.astro
+++ b/src/components/home/1. Presentation.astro
@@ -4,10 +4,9 @@
       I'm Kev
     </h1>
     <p class="mb-3">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda tempora sunt iste quia officia illo obcaecati esse alias, nihil corrupti animi cupiditate adipisci temporibus aliquam quaerat vitae culpa, vel omnis.
-    </p>
-    <p class="mb-3">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus rerum laborum facilis corrupti aliquam praesentium. Voluptate, provident! Esse culpa omnis nesciunt quo vitae excepturi alias reprehenderit, temporibus odio modi doloribus.
+      Years working on Web2 projects as a full-stack PHP and Javascript developer. Carrying that knowledge to Web3 to decentralize applications and leading teams. <br>
+      Writer, content creator for Platzi's community, and I have a degree in information systems BTW. <br>
+      Taking my first steps as an entrepreneur.
     </p>
     <hr>
   </div>
