--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,7 +21,7 @@ const year = new Date().getFullYear();
 
         <ul class="mt-8 flex items-center gap-6">
           <li>
-            <a href="https://www.linkedin.com/in/kevinfiorentino/" title="LinkedIn" target="_blank" rel="noreferrer" class="transition hover:opacity-75">
+            <a href="https://www.linkedin.com/in/kevinfiorentino/" title="LinkedIn" target="_blank" rel="noreferrer" class="footer-icon">
               <span class="sr-only">LinkedIn</span>
               <svg viewBox="0 0 19 18" height="18" xmlns="http://www.w3.org/2000/svg">
                 <path fill="#FAFAFA" d="M3.94 2A2 2 0 1 1 2 0a2 2 0 0 1 1.94 2zM4 5.48H0V18h4zm6.32 0H6.34V18h3.94v-6.57c0-3.66 4.77-4 4.77 0V18H19v-7.93c0-6.17-7.06-5.94-8.72-2.91z"></path>
@@ -29,7 +29,7 @@ const year = new Date().getFullYear();
             </a>
           </li>
           <li>
-            <a href="https://github.com/KevinFiorentino" title="GitHub" target="_blank" rel="noreferrer" class="transition hover:opacity-75">
+            <a href="https://github.com/KevinFiorentino" title="GitHub" target="_blank" rel="noreferrer" class="footer-icon">
               <span class="sr-only">GitHub</span>
               <svg viewBox="0 0 16 16" width="20" height="20" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
                 <path fill="#FAFAFA" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
@@ -37,7 +37,7 @@ const year = new Date().getFullYear();
             </a>
           </li>
           <li>
-            <a href="https://twitter.com/Kevfiorentino" title="Twitter" target="_blank" rel="noreferrer" class="transition hover:opacity-75">
+            <a href="https://twitter.com/Kevfiorentino" title="Twitter" target="_blank" rel="noreferrer" class="footer-icon">
               <span class="sr-only">Twitter</span>
               <svg viewBox="0 0 273.5 222.3" height="18" xmlns="http://www.w3.org/2000/svg">
                 <path fill="#FAFAFA" d="M273.5 26.3a109.77 109.77 0 0 1-32.2 8.8 56.07 56.07 0 0 0 24.7-31 113.39 113.39 0 0 1-35.7 13.6 56.1 56.1 0 0 0-97 38.4 54 54 0 0 0 1.5 12.8A159.68 159.68 0 0 1 19.1 10.3a56.12 56.12 0 0 0 17.4 74.9 56.06 56.06 0 0 1-25.4-7v.7a56.11 56.11 0 0 0 45 55 55.65 55.65 0 0 1-14.8 2 62.39 62.39 0 0 1-10.6-1 56.24 56.24 0 0 0 52.4 39 112.87 112.87 0 0 1-69.7 24 119 119 0 0 1-13.4-.8 158.83 158.83 0 0 0 86 25.2c103.2 0 159.6-85.5 159.6-159.6 0-2.4-.1-4.9-.2-7.3a114.25 114.25 0 0 0 28.1-29.1"></path>
@@ -45,7 +45,7 @@ const year = new Date().getFullYear();
             </a>
           </li>
           <li>
-            <a href="https://platzi.com/p/KevinFiorentino/" title="Platzi" target="_blank" rel="noreferrer" class="transition hover:opacity-75">
+            <a href="https://platzi.com/p/KevinFiorentino/" title="Platzi" target="_blank" rel="noreferrer" class="footer-icon">
               <span class="sr-only">Platzi</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 65 75" height="22"  style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g><path fill="#FAFAFA" d="M 30.5,-0.5 C 33.8333,-0.5 37.1667,-0.5 40.5,-0.5C 49.8996,6.56474 57.8996,14.8981 64.5,24.5C 64.5,26.5 64.5,28.5 64.5,30.5C 58.9607,37.5475 52.794,44.2141 46,50.5C 45.3333,51.1667 45.3333,51.8333 46,52.5C 48.5535,54.7162 50.7201,57.2162 52.5,60C 49.2756,64.7261 45.2756,68.5595 40.5,71.5C 37.1667,71.5 33.8333,71.5 30.5,71.5C 19.8333,61.5 9.5,51.1667 -0.5,40.5C -0.5,37.1667 -0.5,33.8333 -0.5,30.5C 9.5,19.8333 19.8333,9.5 30.5,-0.5 Z M 34.5,12.5 C 40.4218,16.7513 45.7551,21.7513 50.5,27.5C 45.5,32.8333 40.5,38.1667 35.5,43.5C 37.8333,46.1667 40.1667,48.8333 42.5,51.5C 40.5,54.1667 38.1667,56.5 35.5,58.5C 27.5,51.1667 19.8333,43.5 12.5,35.5C 19.8548,27.8128 27.1881,20.1461 34.5,12.5 Z"/></g>
@@ -64,22 +64,22 @@ const year = new Date().getFullYear();
           <nav aria-label="Website navigation" class="mt-6">
             <ul class="space-y-4 text-sm">
               <li>
-                <a href={`/${lang}`} title="Home" class="text-white transition hover:opacity-75">
+                <a href={`/${lang}`} title="Home" class="text-white transition hover:underline">
                   Home
                 </a>
               </li>
               <li>
-                <a href={`/${lang}/blog`} title="Blog" class="text-white transition hover:opacity-75">
+                <a href={`/${lang}/blog`} title="Blog" class="text-white transition hover:underline">
                   Blog
                 </a>
               </li>
               <li>
-                <a href={`/${lang}/work-experience`} title={t('experience')} class="text-white transition hover:opacity-75">
+                <a href={`/${lang}/work-experience`} title={t('experience')} class="text-white transition hover:underline">
                   {t('experience')}
                 </a>
               </li>
               <li>
-                <a href={`/${lang}/contact`} title={t('contact')} class="text-white transition hover:opacity-75">
+                <a href={`/${lang}/contact`} title={t('contact')} class="text-white transition hover:underline">
                   {t('contact')}
                 </a>
               </li>
@@ -94,22 +94,22 @@ const year = new Date().getFullYear();
           <nav aria-label={t('footer.recommends')} class="mt-6">
             <ul class="space-y-4 text-sm">
               <li>
-                <a href={`/${lang}/tags`} title={t('all-tags')} class="text-white transition hover:opacity-75">
+                <a href={`/${lang}/tags`} title={t('all-tags')} class="text-white transition hover:underline">
                   {t('all-tags')}
                 </a>
               </li>
               <li>
-                <a href={`/${lang}/blog/javascript`} title="Blog Javascript" class="text-white transition hover:opacity-75">
+                <a href={`/${lang}/blog/javascript`} title="Blog Javascript" class="text-white transition hover:underline">
                   Javascript
                 </a>
               </li>
               <li>
-                <a href={`/${lang}/tags/solana`} title="Blog Solana" class="text-white transition hover:opacity-75">
+                <a href={`/${lang}/tags/solana`} title="Blog Solana" class="text-white transition hover:underline">
                   Solana
                 </a>
               </li>
               <li>
-                <a href={`/${lang}/tags/ipfs`} title="Blog IPFS" class="text-white transition hover:opacity-75">
+                <a href={`/${lang}/tags/ipfs`} title="Blog IPFS" class="text-white transition hover:underline">
                   IPFS
                 </a>
               </li>
@@ -124,12 +124,12 @@ const year = new Date().getFullYear();
           <nav aria-label="Legal" class="mt-6">
             <ul class="space-y-4 text-sm">
               <li>
-                <a href={`/rss.xml`} target="_blank" title="RSS" class="text-white transition hover:opacity-75">
+                <a href={`/rss.xml`} target="_blank" title="RSS" class="text-white transition hover:underline">
                   RSS
                 </a>
               </li>
               <!-- <li>
-                <a href={`/${lang}/policy`} title={t('policy')} class="text-white transition hover:opacity-75">
+                <a href={`/${lang}/policy`} title={t('policy')} class="text-white transition hover:underline">
                   {t('policy')}
                 </a>
               </li> -->
@@ -156,6 +156,11 @@ footer {
 
     span {
       font-size: 0.65rem;
+    }
+  }
+  .footer-icon:hover {
+    svg path {
+      fill: var(--alternative);
     }
   }
 }
