--- a/src/pages/[lang]/tags/[tag].astro
+++ b/src/pages/[lang]/tags/[tag].astro
@@ -10,7 +10,6 @@ import { languages } from '@i18n/ui';
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
 import MainLayout from '@layouts/MainLayout.astro';
 import BlogCard from '@components/BlogCard.astro';
-import Breadcrumbs from '@components/articles/Breadcrumbs.astro';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
@@ -73,10 +72,13 @@ const props = Astro.props;
   addWidth={true}
 >
   <div>
-    <p class="dark:text-white">Tag</p>
+    <a href={`/${lang}/tags`} title={t('go-tags')} class="dark:text-white hover:underline">
+      Tag
+    </a>
     <h1 class="text-gradient capitalize">
       {param.tag}
     </h1>
+    <hr><br>
   </div>
   <br><br>
   <div role="list" class="cards-grid">
