Change work-experience to projects

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -74,8 +74,8 @@ const year = new Date().getFullYear();
                 </a>
               </li>
               <li>
-                <a href={`/${lang}/work-experience`} title={t('experience')} class="text-white transition hover:underline">
-                  {t('experience')}
+                <a href={`/${lang}/projects`} title={t('projects')} class="text-white transition hover:underline">
+                  {t('projects')}
                 </a>
               </li>
               <li>
