--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,8 +30,8 @@ const t = useTranslations(lang);
                 <a href={`/${lang}/blog`} title="Blog" class="text-gray-500 dark:text-white hover:underline focus:ring px-4 py-1">
                   <span class="text-sm font-medium">Blog</span>
                 </a>
-                <a href={`/${lang}/work-experience`} title={t('experience')} class="text-gray-500 dark:text-white hover:underline focus:ring px-4 py-1">
-                  <span class="text-sm font-medium">{t('experience')}</span>
+                <a href={`/${lang}/projects`} title={t('projects')} class="text-gray-500 dark:text-white hover:underline focus:ring px-4 py-1">
+                  <span class="text-sm font-medium">{t('projects')}</span>
                 </a>
                 <a href={`/${lang}/contact`} title={t('contact')} class="text-gray-500 dark:text-white hover:underline focus:ring px-4 py-1">
                   <span class="text-sm font-medium">{t('contact')}</span>
@@ -83,8 +83,8 @@ const t = useTranslations(lang);
           <a href={`/${lang}/blog`} title="Blog" class="text-gray-500 dark:text-white hover:underline block rounded-md px-3 py-2 text-base font-medium">
             <span class="text-sm font-medium">Blog</span>
           </a>
-          <a href={`/${lang}/work-experience`} title={t('experience')} class="text-gray-500 dark:text-white hover:underline block rounded-md px-3 py-2 text-base font-medium">
-            <span class="text-sm font-medium">{t('experience')}</span>
+          <a href={`/${lang}/projects`} title={t('projects')} class="text-gray-500 dark:text-white hover:underline block rounded-md px-3 py-2 text-base font-medium">
+            <span class="text-sm font-medium">{t('projects')}</span>
           </a>
           <a href={`/${lang}/contact`} title={t('contact')} class="text-gray-500 dark:text-white hover:underline block rounded-md px-3 py-2 text-base font-medium">
             <span class="text-sm font-medium">{t('contact')}</span>
