--- a/src/pages/[lang]/blog/[category]/index.astro
+++ b/src/pages/[lang]/blog/[category]/index.astro
@@ -48,7 +48,7 @@ const post = Astro.props;
     <a href={`/${lang}/blog`} title={t('go-blog')} class="dark:text-white hover:underline">
       Blog
     </a>
-    <h1 class="text-gradient capitalize">
+    <h1 class="text-gradient capitalize mt-0">
       {param.category}
     </h1>
     <hr><br>
