--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -50,7 +50,7 @@ const { recents, collections } = Astro.props;
   addWidth={false}
 >
   <section class="main-width">
-    <h1 class="text-gradient mb-3">
+    <h1 class="text-gradient mb-3 mt-0">
       Blog
     </h1>
     <hr class="mb-0">
