--- a/src/pages/[lang]/projects.astro
+++ b/src/pages/[lang]/projects.astro
@@ -29,7 +29,7 @@ export async function getStaticPaths() {
   <section class="experience-page relative">
 
     <div class="main-width">
-      <h1 class="text-gradient relative z-10">
+      <h1 class="text-gradient relative z-10 mt-0">
         {t('projects')}
       </h1>
       <hr class="mb-0">
