Tech images with white background

--- a/src/components/home/2. Techs.astro
+++ b/src/components/home/2. Techs.astro
@@ -15,7 +15,7 @@ const t = useTranslations(lang);
 
       <div class="techs-group m-3">
         <img src="/tech/javascript.png" alt="Javascript logo" title="Javascript" />
-        <img src="/tech/typescript.svg" alt="TypeScript logo" title="TypeScript" />
+        <img src="/tech/typescript.png" alt="TypeScript logo" title="TypeScript" />
         <img src="/tech/angular.png" alt="Angular logo" title="Angular" />
         <img src="/tech/react.png" alt="React logo" title="React" />
       </div>
@@ -23,13 +23,13 @@ const t = useTranslations(lang);
       <div class="techs-group m-3">
         <img src="/tech/php.png" alt="PHP logo" title="PHP" />
         <img src="/tech/nodejs.png" alt="NodeJS logo" title="NodeJS" />
-        <img src="/tech/rust.svg" alt="Rust logo" title="Rust" />
+        <img src="/tech/rust.png" alt="Rust logo" title="Rust" />
         <img src="/tech/solidity.png" alt="Solidity logo" title="Solidity" />
       </div>
 
       <div class="techs-group m-3">
         <img src="/tech/solana.svg" alt="Solana logo" title="Solana Blockchain" />
-        <img src="/tech/ethereum.svg" alt="Ethereum logo" title="Ethereum Blockchain" />
+        <img src="/tech/ethereum.png" alt="Ethereum logo" title="Ethereum Blockchain" />
         <img src="/tech/ipfs.png" alt="IPFS logo" title="Interplanetary File System" />
       </div>
 
@@ -82,10 +82,10 @@ const t = useTranslations(lang);
     -webkit-backdrop-filter: blur(4px);
 
     img {
-      max-height: 65px;
-      max-width: 65px;
+      max-height: 70px;
+      max-width: 70px;
       box-shadow: none;
-      margin: 10px;
+      margin: 7px;
       transform: scale(1);
       transition: .5s;
       z-index: 1;
